--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 gcd = "2.1.0"
 paste = "1.0.6"
+egui = "0.22.0"
+egui_extras = "0.22.0"
+eframe = "0.22.0"
+env_logger = "0.10.0"
