--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4.20"
 env_logger = "0.10.0"
 crossbeam = "0.8.2"
 bitfield = "0.14.0"
+memmap = "0.7.0"
 
 [dev-dependencies]
 json = "0.12.4"
