--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ env_logger = "0.10.0"
 crossbeam = "0.8.2"
 bitfield = "0.14.0"
 memmap = "0.7.0"
+cpal = "0.15.3"
 
 [dev-dependencies]
 json = "0.12.4"
