--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ crossbeam = "0.8.2"
 bitfield = "0.14.0"
 memmap = "0.7.0"
 cpal = "0.15.3"
+arrayvec = "0.7.4"
 
 [dev-dependencies]
 json = "0.12.4"
